# ComfyUI_ASR-zh

./: README-EN.md  README.md  __init__.py  asr_nodes.py  pyproject.toml
workflow-examples/: ASR-自动歌词字幕.json  自动歌词字幕.json
