[project]
name = "asr-zh-mw"
description = "Automated Speech Recognition for Chinese."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["faster_whisper"]

[project.urls]
Repository = "https://github.com/billwuhao/ComfyUI_ASR-zh"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mw"
DisplayName = "ComfyUI_ASR-zh"
Icon = ""
